# 2025_AI502_ICCL

./: .gitignore  README.md  evaluation_results.json  finetune_evaluation_report.md  generate_bench.py  pyproject.toml  sanity_check_results.json  train_infer_check_results.json
additional_information/: benchmark.py  example_layers_mk2.py  kernel_tutorial.ipynb  main.py  optimizer_tutorial.ipynb  sanity_check.py  test_flash_attention.py
additional_information/documents/: BENCHMARK_QUICK.md  BENCHMARK_README.md  FLASH_ATTENTION_IMPLEMENTATION.md  FLASH_ATTENTION_QUICK.md  SANITY_CHECK_QUICK.md  SANITY_CHECK_README.md
additional_information/results/: benchmark_results.json  sanity_check_results.json
additional_information/trainers/: __init__.py  mixins.py
config/: debug.json  debug.yaml  default.yaml  default_model_config.json
models/: __init__.py  default_config.py  default_layers.py  default_model.py  example_adapter.py  example_config.py  example_layers.py  example_model.py  example_optimizer.py
models/dtmodel/: __init__.py  config.py  layers.py  model.py
output_FT/my_sft/: adapter_config.json
test/: t1_sanity_check.py  t2_train_infer_check.py  t3_pretrain_benchmark.py  t4_finetune_benchmark.py
train/: dpo.py  dpo.sh  pretrain.py  pretrain.sh  pretrain_ES.py  sft.py  sft.sh  sft_orig.py
train_LDiff/: dataset.py  pretrain.py  pretrain.sh
train_vanilla/: pretrain.py  pretrain.sh
wandb/: latest-run
wandb/run-20251210_180753-c6vuyz6a/: run-c6vuyz6a.wandb
wandb/run-20251210_205854-c6vuyz6a/: run-c6vuyz6a.wandb
(+148 files in other folders)
