[project]
name = "assignment-2025"
version = "0.1.0"
description = "env for assignment 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.10.1",
  "datasets>=2.19.1",
  "liger-kernel>=0.6.2",
  "matplotlib>=3.10.7",
  "safetensors>=0.6.2",
  "torch==2.8.0+cu129; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "transformers>=4.57.0",
  "wheel>=0.45.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
